@@ -1,3 +1,8 @@
+2018-01-30  Igor Tsimbalist  <igor.v.tsimbalist@intel.com>
+
+	PR target/84066
+	* gcc.target/i386/cet-sjlj-6.c: New test.
+
 2018-01-29  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/84057
